--- a/myproject/templates/dpo/courses/courses.html
+++ b/myproject/templates/dpo/courses/courses.html
@@ -170,9 +170,9 @@
                     </select>
 
                     <div class="filter-buttons">
-                        <button type="submit" class="btn btn-primary">
+                        {% comment %} <button type="submit" class="btn btn-primary">
                             <i class="fas fa-check me-2"></i>Применить
-                        </button>
+                        </button> {% endcomment %}
                         <a href="{% url 'courses' %}" class="btn btn-outline">
                             <i class="fas fa-undo me-2"></i>Сбросить
                         </a>
