--- a/myproject/templates/dpo/groups/group_detail.html
+++ b/myproject/templates/dpo/groups/group_detail.html
@@ -294,8 +294,12 @@
                 </table>
             </div>
             {% else %}
-                <div class="alert alert-info">
-                    <i class="fas fa-info-circle me-2"></i>В группе нет слушателей
+                <div class=" d-flex align-items-center" style="border-left: 4px solid #9999FF; padding-left: 10px;">
+                    <i class="fas fa-users-slash fa-2x me-3" style="color: #9999FF;"></i>
+                    <div>
+                        <h5 class="alert-heading mb-1" style="color: #555;">В группе пока нет слушателей</h5>
+                        <p class="mb-0" style="color: #666;">Добавьте слушателей, чтобы начать работу с группой</p>
+                    </div>
                 </div>
             {% endif %}
             
