--- a/myproject/templates/student/student_statements.html
+++ b/myproject/templates/student/student_statements.html
@@ -140,10 +140,13 @@
             </div>
         </div>
         {% empty %}
-        <div class="col-12">
-            <div class="alert alert-info text-center">
-                <i class="fas fa-info-circle me-2"></i>
-                У вас нет активных заявлений
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class=" text-center py-5">
+                        <i class="fas fa-file-alt fa-4x mb-4" style="color: #9999FF;"></i>
+                        <h4 class="mb-3">У вас нет активных заявлений</h4>
+                        <p class="text-muted mb-4">Здесь будут отображаться все ваши поданные заявления</p>
+                </div>
             </div>
         </div>
         {% endfor %}
